# cloop

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  cloop.sln
cmake/: install.cmake
src/cloop/: Action.cpp  Action.h  CMakeLists.txt  Expr.cpp  Expr.h  Generator.cpp  Generator.h  Lexer.cpp  Lexer.h  Main.cpp  Parser.cpp  Parser.h  cloop.vcxproj  cloop.vcxproj.filters
src/tests/test1/: CMakeLists.txt  CTest.c  CalcCApi.c  CalcCApi.h  CalcCppApi.h  CalcPascalApi.implementation.pas  CalcPascalApi.interface.pas  CalcPascalApi.pas  CppTest.cpp  Interface.idl  Main.cpp  PascalClasses.pas  PascalLibrary.dpr  PascalLibrary.pas  PascalTest.dpr  PascalTest.pas  test1-c-dll.vcxproj  test1-c-exe.vcxproj  test1-cpp-dll.vcxproj  test1-cpp-exe.vcxproj
src/tests/test1/java/: pom.xml
src/tests/test1/java/src/main/java/com/github/asfernandes/cloop/tests/test1/: Calc.java  CalcException.java  ICalc.java
src/tests/test1/java/src/test/java/com/github/asfernandes/cloop/tests/test1/: CalcTest.java
